[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["wxlxy316 <wxlxy316@163.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
fastapi = "^0.79.0"
colorama = "^0.4.5"
uvicorn = {extras = ["standard"], version = "^0.18.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
